--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@faker-js/faker": "^9.0.0",
     "@types/node": "^20",
     "@types/pg": "^8.11.8",
     "@types/react": "^18",
